Long overdue fix for header spacing
(need to check each app for issues when this rolls out everywhere)

--- a/app/assets/stylesheets/ecosystems.scss
+++ b/app/assets/stylesheets/ecosystems.scss
@@ -476,7 +476,7 @@ body {
 
 /*  Header */
 .header {
-  padding: 2em 0;
+  padding: 2em 0 0;
 }
 
 /*  Footer */
